[package]
name = "hail-batch"
version = "0.0.1"
authors = ["Chris Vittal <chris@vittal.dev>"]
edition = "2018"
license = "MIT"
description = "A hail batch service client library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.reqwest]
version = "0.10.8"
features = ["json", "gzip", "brotli"]

[dependencies.tokio]
version = "0.2.22"
features = ["full"]

[dependencies.serde]
version = "1.0.116"
features = ["derive"]

[dependencies.chrono]
version = "0.4.17"
features = ["serde"]

[dependencies.url]
version = "2.1.1"
features = ["serde"]

[dependencies]
argh = "0.1.3"
base64 = "0.12.3"
color-eyre = "0.5.5"
directories = "3.0.1"
lazy_static = "1.4.0"
rand = "0.7.3"
regex = "1.3.9"
serde_json = "1.0.57"
serde_yaml = "0.8.13"
thiserror = "1.0.20"

[profile.dev.package."*"]
opt-level = 2
